package sample.db;

/**
 * Параметры подключения к базе данных
 */
public class Configs {
    protected String dbHost = "localhost";
    protected String dbPort = "3306";
    protected String dbUser = "root";
    protected String dbPass = "password";
    protected String dbName = "minerals";
}
