package sample.db;

/**
 * Строковые константы названий таблиц и столбцов
 */
public class Const {
    public static final String MINERALS_TABLE = "minerals";
    public static final String MINERAL_ID = "id";
    public static final String MINERAL_NAME = "name";
    public static final String MINERAL_FORMULA = "formula";
    public static final String MINERAL_COLOR = "color";
    public static final String MINERAL_LINE_COLOR = "line_color";
    public static final String MINERAL_SHINE = "shine";
    public static final String MINERAL_TRANSPARENCY = "transparency";
    public static final String MINERAL_HARDNESS = "hardness";
    public static final String MINERAL_DENSITY = "density";
}
