package sample.models;

/**
 * Модель экрана добавления минерала
 */
public class AddModel {

    private Mineral mineral;

    public Mineral getMineral() {
        return mineral;
    }

    public void setMineral(Mineral mineral) {
        this.mineral = mineral;
    }
}
