package sample.models;

import java.util.List;

/**
 * Модель главного экрана
 */
public class MainModel {

    private List<Mineral> minerals;
    private String searchText;

    public List<Mineral> getMinerals() {
        return minerals;
    }

    public void setMinerals(List<Mineral> minerals) {
        this.minerals = minerals;
    }

    public String getSearchText() {
        return searchText;
    }

    public void setSearchText(String searchText) {
        this.searchText = searchText;
    }
}
